1.2.0 ( rXXXX )
---------------

1.1.1 ( rXXXX )
---------------

Added the Ivy and Maven Ant Tasks jars to the binary distribution.

1.1.0 ( r8964 )
---------------

Added metadata to the Maven target set.

Updated the Ivy example a bit.  Switched to Ivy 2.0.0-beta-1.

Added a Gant Ant Task.  (For supporting continuous integration systems that insist on using Ant.)
Unfortunately, there is a problem with loading the Groovyc task in an Gant script executed from an Ant
script -- see GANT-19.   The Gant Ant task is written in Java which leads to the build requiring the use of
the joint Groovy compiler.  This means it is not possible to build Gant using Groovy 1.0.

Added creating Cobertura reports via the coberturaTest target in the Gantfile.

Amended some of the error handling, especially target definition.

Added constructors to allow the Gant script to be a parameter.  This allows programs (including the tests)
not to have to use a command line approach to starting Gant.  Many of the tests refactored.

Added extra options in the LaTeX tool execution to avoid any interactive mode of LaTeX.


1.0.2 ( r8867 )
---------------

Fixed bug in parameter types of message Closure in gant.Gant.

Declared this release and eradicated 1.0.1 to avoid any hassles with the above bug.

1.0.1 ( r8861 )
---------------

Amended and extended the Maven target set so that it actually works well enough to be useful.

Change the return codes so as to provide easier discrimination of error cases.

Removed --lib option and replaced with --classpath | -P option.  Takes a path not a single jar.

Added setDefaultTarget function to make setting up the default target easier.  Also the help output for the
target default assumes that the description string is just the name of the default target.

Rearranged the filestore to work better for command line working, Eclipse, and the Maven target set.

Gant now compiles in Eclipse 3.2.2 with Groovy plugin 1.5.0.200712080221. 


1.0.0 ( r8816 )